# flask-boilerplate

./: .dockerignore  Dockerfile  README.md  pyproject.toml  webapp.local.env
docker/: docker-compose.yml  mongodb.env  webapp.env
flask-boilerplate/: celery_worker.py  config.py  webapp.py  websocket.py
flask-boilerplate/app/: __init__.py  devtools.py  jwt.py  logs.py  schemas.py
flask-boilerplate/app/domains/: __init__.py  admin.py  auth.py  event.py  report.py  user.py  webhook.py
flask-boilerplate/app/models/: __init__.py  another_model.py  base_document.py  report.py  user.py
flask-boilerplate/app/schemas/: common.json  login.json  register.json  register_confirm.json  report_post.json  user_contacts_post.json  user_put.json  webhook_alert_post.json
flask-boilerplate/app/swagger/: admin_get_users.yml  login_post.yml
flask-boilerplate/app/tasks/: __init__.py  report.py  user.py
flask-boilerplate/app/utils/: helpers.py  time_restrictions.py
flask-boilerplate/app/websocket/: __init__.py  events.py  jwt.py  utils.py
tests/: conftest.py
tests/integration/: test_integration.py
tests/test_data/: load.py
tests/test_data/mongo_collections/: errors.json  reports.json  users.json
tests/unit/domains/: test_admin.py  test_auth.py  test_user.py
tests/unit/tasks/: test_task_notification.py  test_task_report.py
