[tool.poetry]
name = "webapp-backend"
version = "0.1.0"
description = "Generic Flask backend boilerplate with JWT auth, MongoDB, Redis, Celery, and WebSockets"
authors = ["Stefano Balzan <stefano.balzan@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2.5"
Flask-Cors = "^4.0.0"
flask-expects-json = "^1.7.0"
Flask-JWT-Extended = "^4.5.3"
flask-marshmallow = "^0.15.0"
requests = "^2.31.0"
Flask-Log-Request-ID = "^0.10.1"
gunicorn = "^21.2.0"
celery = "^5.3.4"
flower = "^2.0.1"
redis = "^5"
bcrypt = "^4.0.1"
certifi = "^2023.7.22"
pymongo = {version = "^3", extras = ["srv"]}
cryptography = "^41.0.5"
flask-mongoengine = {git = "https://github.com/idoshr/flask-mongoengine.git", rev = "1.0.1"}
flask-redis = "^0.4.0"
flask-pika = {git = "https://github.com/Jzaca-RC-Wu/flask-pika.git"}
boto3 = "^1.34.113"
flasgger = "^0.9.7.1"
apispec = "^6.6.1"
orjson = "^3.10.7"
starlette = "^0.39.2"
uvicorn = {version = "0.24.0.post1", extras = ["standard"]}
pytest-mock = "^3.14.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
pytest-cov = "^5.0.0"
requests-mock = "^1.11.0"
pytest-celery = "^0.0.0"
freezegun = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
